[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/background/LevelCreateFloor.png" type="Texture" id=1]
[ext_resource path="res://assets/background/LevelCreateCursor.png" type="Texture" id=2]
[ext_resource path="res://src/levels/LevelCreator.gd" type="Script" id=3]
[ext_resource path="res://assets/background/Sidebar.png" type="Texture" id=4]
[ext_resource path="res://assets/background/SidebarCursor.png" type="Texture" id=5]
[ext_resource path="res://assets/background/HudNumbers.png" type="Texture" id=6]
[ext_resource path="res://assets/background/LevelCreateStuff.png" type="Texture" id=7]
[ext_resource path="res://assets/sfx/S3K_ring.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/background/menu/Competition.mp3" type="AudioStream" id=9]
[ext_resource path="res://assets/background/menu/ErrBlue.png" type="Texture" id=10]
[ext_resource path="res://assets/background/menu/ErrPlayer.png" type="Texture" id=11]

[sub_resource type="Animation" id=1]
resource_name = "Flash"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="LevelCreator" type="Node2D"]
script = ExtResource( 3 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -8.0

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Background" type="TextureRect" parent="."]
margin_top = 8.0
margin_right = 704.0
margin_bottom = 712.0
texture = ExtResource( 1 )

[node name="Sidebar" type="TextureRect" parent="."]
margin_left = 704.0
margin_right = 960.0
margin_bottom = 720.0
texture = ExtResource( 4 )

[node name="Hundreds" type="Sprite" parent="Sidebar"]
position = Vector2( 96, 286 )
scale = Vector2( 0.667, 0.667 )
texture = ExtResource( 6 )
hframes = 10

[node name="Units" type="Sprite" parent="Sidebar"]
position = Vector2( 160, 286 )
scale = Vector2( 0.667, 0.667 )
texture = ExtResource( 6 )
hframes = 10

[node name="Tens" type="Sprite" parent="Sidebar"]
position = Vector2( 128, 286 )
scale = Vector2( 0.667, 0.667 )
texture = ExtResource( 6 )
hframes = 10

[node name="Palette" type="Sprite" parent="Sidebar"]
position = Vector2( 128, 70 )
scale = Vector2( 0.667, 0.667 )
texture = ExtResource( 6 )
hframes = 10

[node name="LevelNumber" type="Sprite" parent="Sidebar"]
position = Vector2( 128, 490 )
scale = Vector2( 0.667, 0.667 )
texture = ExtResource( 6 )
hframes = 10

[node name="Arrow" type="Sprite" parent="Sidebar"]
position = Vector2( 130, 212 )
texture = ExtResource( 7 )
hframes = 5
vframes = 2
frame = 5

[node name="HundredsB" type="Sprite" parent="Sidebar"]
position = Vector2( 96, 386 )
scale = Vector2( 0.667, 0.667 )
texture = ExtResource( 6 )
hframes = 10

[node name="TensB" type="Sprite" parent="Sidebar"]
position = Vector2( 128, 386 )
scale = Vector2( 0.667, 0.667 )
texture = ExtResource( 6 )
hframes = 10

[node name="UnitsB" type="Sprite" parent="Sidebar"]
position = Vector2( 160, 386 )
scale = Vector2( 0.667, 0.667 )
texture = ExtResource( 6 )
hframes = 10

[node name="Cursor" type="Sprite" parent="."]
position = Vector2( -22, -22 )
texture = ExtResource( 2 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cursor"]
anims/Flash = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="SideCursor" type="Sprite" parent="."]
visible = false
position = Vector2( 730, 182 )
texture = ExtResource( 5 )

[node name="PlayerError" type="TextureRect" parent="."]
margin_left = 713.0
margin_top = 517.0
margin_right = 955.0
margin_bottom = 557.0
texture = ExtResource( 11 )

[node name="BlueError" type="TextureRect" parent="."]
margin_left = 738.0
margin_top = 547.0
margin_right = 928.0
margin_bottom = 587.0
texture = ExtResource( 10 )
